css/main.css
/*ANIMATIONS*/
@-webkit-keyframes arrow {
  0% {top: 1vw;}
  25% {top: 2vw;}
  100% {top: 1vw;}
}

@keyframes arrow {
  0% {top: 1vw;}
  50% {top: 2vw;}
  100% {top: 1vw;}
}

@-webkit-keyframes arrow-right {
  0% {transform: rotate(-135deg);}
  50% {transform: rotate(-150deg);}
  100% {transform: rotate(-135deg);}
}

@keyframes arrow-right {
  0% {transform: rotate(-135deg);}
  50% {transform: rotate(-150deg);}
  100% {transform: rotate(-135deg);}
}
@-webkit-keyframes arrow-left {
  0% {transform: rotate(-135deg);}
  50% {transform: rotate(-150deg);}
  100% {transform: rotate(-135deg);}
}

@keyframes arrow-left {
  0% {transform: rotate(135deg);}
  50% {transform: rotate(150deg);}
  100% {transform: rotate(135deg);}
}

/*RESET*/

body, h1, p, a, ul, li, div {
  padding: 0px;
  margin: 0px;
  font-family: 'Josefin Sans', sans-serif;
  font-size: 4vh;
  color: black;
  cursor: inherit;
  list-style: none;
}

/*NAV AND PAGE DOWN ICONS*/

.square {
  position: fixed;
  top: 20px;
  width: 6vw;
  height: 6vw;
  cursor: pointer;
  background-color: black;
  z-index: 99;
}

.nav {
  left: 20px;
  display: flex;
  align-items: center;
  transition: ease 0.4s;
}

.navicon {
  margin: 0 1.5vw;
  width: 3vw;
}

.navline {
  height: .25vw;
  width: 3vw;
  background-color: white;
  transition: ease 0.4s;
}

.top {
  margin-bottom: 1vw;
}

.middle {
  margin-top: 1vw;
  margin-bottom: 1vw;
}

.bottom {
  margin-top: 1vw;
}

.nav:hover .top {
  width: 2vw;
}

.nav:hover .bottom {
  width: 4vw;
}

.nav-links {
  margin: 0 1vw;
  visibility: hidden;
  opacity: 0;
  display: flex;
  justify-content: space-between;
  transition: ease 0.5s;
}

.nav-link {
  color: white;
  transition: ease 0.4s;
  padding: 5px;
}

.nav-link:hover {
  color: lightgray;
}

.page-down {
  right: 20px;
}

.arrow-line-down {
  position: absolute;
  top: 0;
  left: 2.875vw;
  background-color: white;
  width: .25vw;
  height: 3.5vw;
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

.arrow {
  position: relative;
  top: 1vw;
  transition: ease 0.25s;
}

.arrow-bounce {
  animation: arrow 1s infinite;
  animation-timing-function: ease;
  animation-play-state: running;
  -webkit-animation: arrow 1s infinite;
  -webkit-animation-timing-function: ease;
  -webkit-animation-play-state: running;
}

.arrow-line-right {
  position: absolute;
  top: 3.45vw;
  left: 2.875vw;
  width: .25vw;
  height: 2vw;
  transform: rotate(-135deg);
  transform-origin: 50% 0%;
  background-color: white;
  border-top-left-radius: 1px;
}

.right-arrow-animation {
  animation: arrow-right 1s infinite;
  animation-timing-function: ease;
  animation-play-state: running;
  -webkit-animation: arrow-right 1s infinite;
  -webkit-animation-timing-function: ease;
  -webkit-animation-play-state: running;
}

.arrow-line-left {
  position: absolute;
  top: 3.45vw;
  left: 2.875vw;
  width: .25vw;
  height: 2vw;
  transform: rotate(135deg);
  transform-origin: 50% 0%;
  background-color: white;
  border-top-right-radius: 1px;
}

.left-arrow-animation {
  animation: arrow-left 1s infinite;
  animation-timing-function: ease;
  animation-play-state: running;
  -webkit-animation: arrow-left 1s infinite;
  -webkit-animation-timing-function: ease;
  -webkit-animation-play-state: running;
}

.top-cross {
  margin-bottom: 1vw;
  transform: translateY(1.25vw) rotate(45deg);
}

.mid-cross {
  margin-top: 1vw;
  margin-bottom: 1vw;
  background-color: black;
}

.bottom-cross {
  margin-top: 1vw;
  transform: translateY(-1.25vw) rotate(-45deg);
}

/*BLOCKS ON WEBSITE*/

.wrapper {
  display: block;
  padding: 30px 0;
}

/*NAME PAGE*/

.name {
  position: relative;
  text-align: center;
  font-size: 20vh;
  white-space: nowrap;
  margin: 120px 0px;
}

.name-page {
  background-color: #f2f2f2;
}

/* ABOUT PAGE */

.about-outer {
  position: relative;
  text-align: center;
  margin: 30px 50px;
}

.about {
  font-size: 4vh;
}

.link-container {
  padding: 10px;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 5vh;
}

.link-icon {
  height: 4vh;
  width: 4vh;
  margin-bottom: 1px;
  background-size: contain;
  background-repeat: no-repeat;
  transition: 0.3s ease;
}

.pdf {
  background-image: url("../images/pdf.png");
}

.links {
  padding: 0 6px;
  font-size: 4vh;
}

.link-container:hover .links {
  color: red;
  transition: ease 0.3s;
}

.link-container:hover .link-icon {
  height: 5vh;
  width: 5vh;
}

.about-page {
  background-color: #e6e6e6;
}

/*PROJECTS*/

.project {
  text-align: center;
}

.project-main {
  background-color: lightgreen;
}

.project-title {
  font-size: 50px;
  margin-bottom: 50px;
}

.record-cloud-icon {
  background-image: url("../images/rc-icon.png");
}

.cac-icon {
  background-image: url("../images/cac-icon.png");
}

.pae-icon {
  background-image: url("../images/pae-icon.png");
}

.recordcloud {
  background-color: #f68989;
}

.cac {
  background-color: #fb7070;
}

.pae {
  background-color: pink;
}

.project-content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.screenshot {
  margin: 0px 50px 30px 50px;
  cursor: pointer;
  height: 40vh;
}

.screenshot-image {
  position: relative;
  bottom: 0px;
  right: 0px;
  height: 100%;
  transition: ease 0.5s;
}

.screenshot:hover .screenshot-image {
  height: 110%;
}

.project-description {
  margin: 0 50px;
  font-size: 12px;
}

/*CONTACT*/

.contact-title {
  text-align: center;
  font-size: 50px;
  margin-bottom: 50px;
}

.contact {
  background-color: lightblue;
}

.contact-links {
  display: flex;
  flex-direction: column;
  align-items: center;
}

